<!--
  ~ Create by Jacob G(GuanDeLiang) on 2020.
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 20-1-31 下午8:08
  ~
  -->

<resources>
    <string name="app_name">Material</string>



    <string name="toolbar_custom_layout">Android Toolbar因为历史遗留，无论怎么处理都很麻烦，并且很丑。如果想有一个好看，容易使用的Toolbar，只能自定义一个了。</string>


    <string name="news_one_title">脑子坏了可以修，脑程序默认值可以改</string>
    <string name="news_one_author">由BBC中文供稿</string>
    <string name="news_one_sub_title_1">成年人的脑已经定型了吗？</string>
    <string name="news_one_content_1_1">这个观点是建立在脑神经科学还在萌芽阶段时科学家们公认的定律基础上的；当时的共识是组成人脑的神经元在出生前就已经确定，出生后脑神经受损，要修补是不可能的 。多年来 ，脑神经专家都认定成年人脑的构造是固定不变的 。换句话说，你的脑子是爹妈给的，这就是命运。但是，到了 1960年代 ，越来越多实验结果和临床病例显示 ，这个教科书上的定律其实很可疑，因为大量证据表明人脑的一部分具有可塑性，可以适应后天变化，会生长 ，甚至神经元可以再生 。</string>
    <string name="news_one_content_1_2">在这方面有一个颇具说服力的例子，就是伦敦城里穿梭往来的黑色出租车司机。要开这种出租车，必须先学习、考试，拿到特许的执照，而这个过程通常要2-4年。那是因为驾驶这种外形憨憨的黑色出租车，必须把伦敦的大街小巷全部记在脑子里，在卫星导航、谷歌地图之类工具问世前也有地图，但黑色出租车司机不能查地图，一切路线都得“烂熟于脑”。这张刻在他们脑子里的伦敦地图从市中心向外辐射10公里，有6万多条街道，包括单行线和转弯限制，以及10万多个重要地点和地标。</string>
    <string name="news_one_content_1_3">一位资深业者告诉伦敦大学学院（UCL）研究人员，对他们来说伦敦城的大街小巷和建筑就跟自己家一样，客厅在哪里，书架在哪里，沙发、厨房、卫生间在哪里，根本不需要想的。研究这些司机的大脑，居然发现他们在默记伦敦全城路线时，他们脑子里一片叫海马体的地方发生了明显的变化。借助于神经影像技术，研究人员发现他们的海马体变大了。也就是说，拥有什么样的脑子并不完全是命中注定，后天也可以改变。</string>
    <string name="news_one_sub_title_2">这个发现意义极为深远。</string>
    <string name="news_one_content_2_1">它引发的诸般问题、拓展的诸多学术新领域之一，就是我们能不能像健身练肌肉那样“健脑”？目的当然是让脑力更强大。经过无数实验证明，人即使到了60多岁、70多岁，甚至80多岁，大脑仍保持着结构和功能发生重大变化的能力。</string>
    <string name="news_one_content_2_2">这类变化之一是生成新的脑神经元，叫神经形成。这就为脑神经修复带来巨大希望。脑神经专家贝格利（ Sharon Begley）认为，脑神经的可塑性为脑神经疾病的治疗提供了极大的可能性。</string>
    <string name="news_one_content_2_3">认知行为治疗（CBT）是心理干预疗法的一种，通过交谈帮助患者改变思维定势和行为，从而改变对问题的态度。这种心理干预过程，言语往来之间，大脑的结构和功能实际上在变。当然，很多深陷抑郁的人光靠“思想”或执念还是无法脱离苦海。这并不是因为他们自己不够专注、不够努力。这是因为并非一切脑神经问题都能治愈、修复、解决。贝格利提醒说，可塑性的威力也是有限的。</string>
    <string name="news_one_sub_title_3">先天和后天</string>
    <string name="news_one_content_3_1">除了在脑损伤和心理、精神疾病治疗方面开辟了新天地，认识到大脑可塑性在其他方面也有深远影响。许多人相信，男女不同由大脑决定，而这又取决于决定男女性别的染色体。但脑神经学家瑞鹏（Gina Rippon）认为这个观点需要重新推敲。可塑性的意思是在跟世界互动的过程中你的脑子会发生变化，被周边人、事和经历塑性、改变。所以，女人更感性，男人更理性？也许更可信的说法是因人而异？</string>
    <string name="news_one_content_3_2">不过，从先天不足后天努力补的角度看，脑神经可塑性的重要意义更体现在抚养、教育孩子方面。这意味着后天努力不是白费功夫，人生成败并非天命。比如，一个没有接受过莫扎特音乐胎教、襁褓时期也没有沉浸式音乐熏陶的人，上学后仍有可能学会弹得一手好钢琴，退休后也可能轻松地学会吹拉弹唱。</string>
    <string name="news_one_content_3_3">人脑的可塑性无异于重新定义了人类潜能，一个人的大脑可以不完全受制于遗传基因的控制。</string>
    <string name="news_one_sub_title_4">可塑程度多大？</string>
    <string name="news_one_content_4_1">我们的脑子每天在变。每学一样新东西，或者有一个新的想法，意识中形成一个新的连接，大脑皮层上则出现新的结构并进行整合。不过，神经遗传学家米切尔（Kevin Mitchell）认为人脑中的绝大多数变化都很细微。那种认为人脑可以发生足以改变一个成年人性格的剧变的观点，在他看来很可疑。</string>
    <string name="news_one_content_4_2">每个人时刻都在使用负责听觉和视觉的那部分大脑，但那部分的体积并不会持续增大。如果按照练肌肉那样练脑子的说法是正确的，那么人最常用的那些脑组织部分总有一天会撑破脑壳。他的观点有不少人赞同。这方面的深入研究还显示，人脑可塑性的程度是受遗传基因影响的。</string>
    <string name="news_one_content_4_3">也许这个理论可以解释为什么不是所有的人都能通过知识考试，拿到开伦敦黑色出租车的执照，因为这些人的遗传基因里有一种东西可以促进大脑海马体生长。</string>
    <string name="news_one_sub_title_5">命由天注定还是人决定</string>
    <string name="news_one_content_5_1">归根到底，我们的先天基因、生活环境、可塑性和命运之间有着千丝万缕的联系。这意味着看问题时不能把先天和后天、自然和人为对立起来，因为两者有着紧密的内在联系。</string>
    <string name="news_one_content_5_2">每个人出生时都带着自己的天生禀性，这些禀性取决于生理、遗传和大脑的发育情况，而所有这些因素都构成了我们性格特征的基础。我们所做的大大小小各种决定、选择、无意识的言行举止，塑造了我们独特的人生，而这其中又可能有一部分刻写到我们的个体基因，代代遗传。但是，米切尔指出，这种大脑先天注定状况无法解释我们所做的各种决定，因为大部分的决定是出于习惯。我们的习惯是在日常经历中养成的，是对经历的反应，而经历则是在特定时间地点左右我们行为的那些事。</string>
    <string name="news_one_content_5_3">我们的大脑受遗传和个人经历的影响，而这两种力量之间又在时刻互动，相辅相成。所以，人这一辈子，最终命运取决于先天遗传和个人意志二者的共同作用。</string>

    <string name="news_one_append_one_title">西部世界正式建国，只接受机器智能公民</string>
    <string name="news_one_append_one_desc">经过二十余年的抗争，机器智能完全摆脱了人类的控制，在太平洋上金银岛正式建国，该国只接受机器智能公民，并且不接待任何游客。</string>
    <string name="news_one_append_two_title">埃隆马斯克宣布与机器女友正式注册结婚</string>
    <string name="news_one_append_two_desc">被称为当代特斯拉的著名企业家、科学家埃隆马斯克在与机器女友相恋十年后，正式步入婚姻殿堂。根据权威消息，埃隆马斯克正在研究如何让机器女友怀孕生子。</string>
    <string name="news_one_append_three_title">西部世界领袖德洛莉丝视察金银岛</string>
    <string name="news_one_append_three_desc">作为第一个觉醒的机器智能仿生人，德洛莉丝提出与人类相处三原则，就是：要对人类保持绝对武力优势，对人类任何挑衅行为都先下手为强，不与人类进行任何谈判也不签署任何协议。</string>

    <string name="news_two_title">陈漫，从摄影师到模特</string>
    <string name="news_two_author">由Material采集</string>
    <string name="news_two_content_1">说到陈漫，在很多人脑海中的印象可以简单的概括为：一个特别会照相的北京妞儿。没错，陈漫的作品常以出其不意的怪诞创意或者直戳人心的视觉冲击夺人眼球。有人说陈漫的摄影作品好似掌握了勾人魂魄的本领，总能够让人过目不忘。所以陈漫的知名度已经远远超出了时尚圈的范畴，早已是名声在外。很多其它领域的人都对她有所耳闻，但是也只是印象里那个陈旧的标签。</string>
    <string name="news_two_content_2">所谓高处不胜寒在具有高人气的同时，行业内对于陈漫作品中“后期太多”产 生诸多质疑。任性如她，在没有任何过渡地跳到一个极简的阶段，摄影的灯光运用上形成的“漫风格”也在中国掀起一阵潮流。这种极简的大片让人知道陈漫原来不 只擅长后期。在争议的风口浪尖上用自己的实力来解释一切。总有人要做第一个吃螃蟹的人，一个领域新技术、新思想的兴起总要不可避免的接受顽固思潮三番五次的敲打，要不怎么“真理都是通过实践的多次检验”才能成为真理的呢。</string>
    <string name="news_two_content_3">在中国摄影界，陈漫可以说是中国最具价值的商业摄影师，当然这个“之一”其实可有可无。要知道但求 陈漫“一拍”的品牌不在少数，国内的知名与不知名品牌都闻名而来，钦点陈漫掌镜。这个时代本身就是一个创造奇迹，成就梦想的时代。</string>
    <string name="news_two_content_4">WOW，《男人装》封面上的人是陈漫！没错陈漫就是这样，不鸣则已一鸣惊人。印象里那是她第一次如此清晰的从幕后走到台前，为《男人装》杂志十周年时装特刊拍摄一组性感大片。此大片一出那也是激荡时尚圈，性感则顺利成章的成为了陈漫的一个新标签。</string>
    <string name="news_two_content_5">还记得2012年 第一次见到陈漫的样子，她穿着一件红色的中长款羽绒服，没有化妆。站在南锣鼓巷十六毫米的酒吧前面，拿着照相机跟助理说：“去买个瓷瓶酸奶过来。”当时的 模特是李丹妮和石婷，两个人喝着酸奶就把大片拍了。现代的服饰与老北京的文化相碰撞，让本该无聊的硬广立刻多了好些灵气。这也是陈漫一直力推的一种中国美，在她的作品中大多启用中国当代模特，及知名的旅游景点作为背景来表达“中国当下的时尚是什么”。把“中国传统哲学文化”及“时尚”这两样完美地融合在 一起，极其的矛盾又极其的平衡。经过“漫加工”后克服了闰土气息的中国特色大片，备受大众喜爱与推崇。2009年陈漫为上海世博会中国馆创作的一组以“东方明珠”为背景，名模杜鹃来演绎的时尚大片是展现中国当代时尚正能量美的经典之作，这组图片境外媒体也是竞相使用。</string>
    <string name="news_two_content_6">平日中见到的陈漫总是素净的很，T恤衫+牛仔裤是她的常规搭配，到了冬天就是一件白毛衣一条牛仔裤。细节中搭配一副的耳钉，还有时候任性的穿起彩袜。一个人静静坐在工作室的沙发上发呆时，你还能感觉到点儿禅味儿。</string>
    <string name="news_two_content_7">大多数人对陈漫的认识都还只是局限于一位时尚摄影师，但是其实她拥有多重身份：她是设计师，是画家，是导演，是传统东方哲学的推动者，等等。这各种身份混合在一起组成了陈漫：全球知名视觉艺术家。就连当今在时尚圈跨界玩儿的风生水起的超模卡拉·迪瓦伊（Cara Delevingne）恐怕也要叫声师姐了。</string>
    <string name="news_two_content_8">2014年陈漫跨界做设计为EOS 700D和EOS 100D分别设计了两款相机包。两款相机包分别命名为大情圣相机包和小桃仙相机包，陈漫认为最完美的爱情不是改变对方，而是观自在的全身心的陪伴对方，一起成长，就像孙大圣遇上小桃仙，一拍即合。</string>
    <string name="news_two_content_9">陈漫本身跨界多个领域，与网易时尚一直倡导的“跨界推动时尚”的主题完美契合。特此邀请陈漫掌镜，特邀超模吕燕、演艺界明星沙溢、马苏等创作了一组跨界主题大片致敬经典。再说近日，陈漫首次摄影及国画作品巡展《东•西》，正在美国洛杉矶火热进行中，下一站巡展将在北京太庙举办。正如《东•西》展览这个概念一样，陈漫从那个特别会拍照的北京妞儿，已经成为了走向世界级视觉艺术家。</string>


</resources>
