<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Create by Jacob G(GuanDeLiang) on 2020.
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 20-3-5 下午10:21
  ~
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_002"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_003"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_3"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_004"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_4"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_005"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_5"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_006"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_6"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_007"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_7"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_008"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_8"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/news_2_009"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:lineHeight="24dp"
            android:text="@string/news_two_content_9"/>


    </LinearLayout>


</layout>