<!--
  ~ Create by Jacob G(GuanDeLiang) on 2020.
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 20-1-13 下午4:57
  ~
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            style="?attr/appBarLayoutPrimaryStyle"
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/toolbar_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/news_2_001"/>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"/>

                <LinearLayout
                    android:id="@+id/title_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="?attr/colorOnPrimary"
                        android:text="@string/news_two_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:textColor="?attr/colorOnPrimary"
                        android:text="@string/news_two_author"/>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/news_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_1"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_002"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_2"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_003"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_3"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_004"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_4"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_005"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_5"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_006"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_6"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_007"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_7"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_008"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_8"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/news_2_009"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:paddingTop="16dp"
                            android:lineHeight="24dp"
                            android:text="@string/news_two_content_9"/>


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/author_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/news_card_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">
                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/author_header_card_view"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:elevation="0dp"
                            android:layout_marginLeft="16dp"
                            app:cardCornerRadius="24dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent">
                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/news_2_003"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/author_name_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:layout_marginLeft="16dp"
                            android:text="陈漫"
                            app:layout_constraintTop_toTopOf="@id/author_header_card_view"
                            app:layout_constraintLeft_toRightOf="@id/author_header_card_view"/>

                        <TextView
                            android:id="@+id/author_job_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:layout_marginLeft="16dp"
                            android:text="中国最贵的摄影师"
                            app:layout_constraintLeft_toRightOf="@id/author_header_card_view"
                            app:layout_constraintBottom_toBottomOf="@id/author_header_card_view"/>

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="关注"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:clickable="true"
            app:fabSize="normal"
            app:layout_anchor="@id/collapsing_toolbar_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/icon_favorite" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>